# ashare-sentinel-pro

./: .env.docker.example  .env.example  .env.production  .env.template  .gitignore  .gitignore_project  DEBUG_58_STEPS.md  DEBUG_SUMMARY.md  DEPLOY_LIGHTHOUSE.md  DEPLOY_SUPER_SIMPLE.md  DEPLOY_TENCENT.md  DEVELOPMENT_LOG.md  DOCKER_GUIDE.md  ENV_SETUP_GUIDE.md  GitHub部署指南.md  IC_COMMITTEE_CODE.md  QUICK_START.md  README.md  auto_commit.sh  check_quality.sh  deploy-cleaned.sh  deploy-simple.sh  deploy-tencent.sh  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  init.ps1  init_supabase.sql  migration_auth_init.sql  quick-deploy.bat  quick-deploy.sh  restart_rsshub.bat  rsshub-docker-compose.yml  setup-env.sh  test-docker-build.bat  test-docker-build.sh  杰瑞股份_002353_投委会报告.md
backend/: .dockerignore  .env.example  Dockerfile  GURU_WATCHER_README.md  README.md  debug_auth.py  ic_report_002050.json  ic_report_002050_correct.json  pyproject.toml  requirements.txt  supabase_guru_setup.sql  supabase_schema.sql  test_token_optimization.py
backend/app/: __init__.py  deps.py  main.py
backend/app/config/: __init__.py  guru_sources.py
backend/app/core/: __init__.py  config.py  constants.py  database.py  db.py  db_mysql.py  db_supabase.py  exceptions.py  llm_factory.py  prompts.py
backend/app/data/: stock_database.json
backend/app/models/: __init__.py  (+3 more)
backend/migrations/: v1.6_versioning_schema.sql
backend/scripts/: update_stock_db.py
backend/utils/: constants.py  db_helper.py  error_handler.py  refactored_market_service.py  tech_analysis_helpers.py
(+86 files in other folders)
